--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>עו"ד אבי ליפינר - מומחה במקרקעין</title>
     <meta name="description" content="ליווי משפטי מקצועי ואישי בעסקאות מכר דירות - עו&quot;ד אבי ליפינר" />
     <meta name="author" content="עו&quot;ד אבי ליפינר" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="/lovable-uploads/og-image.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Karantina:wght@300;400;700&display=swap" rel="stylesheet">
