--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
   <head>
@@ -7,10 +6,11 @@
     <title>עו"ד אבי ליפינר - מומחה במקרקעין</title>
     <meta name="description" content="ליווי משפטי מקצועי ואישי בעסקאות מכר דירות - עו&quot;ד אבי ליפינר" />
     <meta name="author" content="עו&quot;ד אבי ליפינר" />
-    <meta property="og:image" content="/lovable-uploads/og-image.png" />
+    <meta property="og:image" content="/real-estate/lovable-uploads/og-image.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Karantina:wght@300;400;700&display=swap" rel="stylesheet">
+    <base href="/real-estate/" />
   </head>
 
   <body>
