--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>עו"ד אבי ליפינר - מומחה במקרקעין</title>
-    <meta name="description" content="ליווי משפטי מקצועי ואישי בעסקאות מכר דירות - עו&quot;ד אבי ליפינר" />
+    <title>עו"ד אבי ליפינר – מומחה במקרקעין ביהודה ושומרון</title>
+    <meta name="description" content="ליווי משפטי ופיננסי מקצועי בעסקאות נדל"ן ביהודה ושומרון, כולל רישום במינהל האזרחי ואתגרים מימוניים ייחודיים" />
     <meta name="author" content="עו&quot;ד אבי ליפינר" />
     
     <!-- Optimized Open Graph tags for better WhatsApp compatibility -->
-    <meta property="og:title" content="עו&quot;ד אבי ליפינר - מומחה במקרקעין" />
-    <meta property="og:description" content="ליווי משפטי מקצועי ואישי בעסקאות מכר דירות" />
+    <meta property="og:title" content="עו&quot;ד אבי ליפינר – מומחה במקרקעין ביהודה ושומרון" />
+    <meta property="og:description" content="ליווי משפטי ופיננסי מקצועי בעסקאות נדל&quot;ן ביהודה ושומרון, עם פתרונות יצירתיים לאתגרים ייחודיים באזור" />
     <meta property="og:image" content="/real-estate/lovable-uploads/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
