Remove bun.lockb and update index.html for improved SEO and content relevance
- Delete bun.lockb file to streamline the project.
- Update meta description in index.html to enhance clarity and SEO for services in Judea and Samaria.
- Modify image source in AboutSection for better asset management.
- Revise content in AdvantagesSection, ContactSection, FaqSection, ServicesSection, and TestimonialsSection to reflect updated offerings and improve user engagement.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>עו"ד אבי ליפינר – מומחה במקרקעין ביהודה ושומרון</title>
-    <meta name="description" content="ליווי משפטי ופיננסי מקצועי בעסקאות נדל"ן ביהודה ושומרון, כולל רישום במינהל האזרחי ואתגרים מימוניים ייחודיים" />
+    <meta name="description" content="ליווי משפטי ופיננסי מקצועי בעסקאות נדל&quot;ן ביהודה ושומרון, כולל רישום במינהל האזרחי ואתגרים מימוניים ייחודיים" />
     <meta name="author" content="עו&quot;ד אבי ליפינר" />
     
     <!-- Optimized Open Graph tags for better WhatsApp compatibility -->
