Update Open Graph tags and lead submission logic for improved SEO and functionality
- Modify Open Graph image source and add URL for better social sharing.
- Update base href in index.html for correct path resolution.
- Change lead submission API endpoint in HeroSection and include source data in LeadForm for better tracking.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <!-- Optimized Open Graph tags for better WhatsApp compatibility -->
     <meta property="og:title" content="עו&quot;ד אבי ליפינר – מומחה במקרקעין ביהודה ושומרון" />
     <meta property="og:description" content="ליווי משפטי ופיננסי מקצועי בעסקאות נדל&quot;ן ביהודה ושומרון, עם פתרונות יצירתיים לאתגרים ייחודיים באזור" />
-    <meta property="og:image" content="/real-estate/lovable-uploads/og-image.png" />
+    <meta property="og:image" content="/lovable-uploads/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://shomron.lipiner.co.il/" />
     <meta property="og:locale" content="he_IL" />
     
     <!-- Emoji Favicon (Scales of Justice) -->
@@ -23,7 +24,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Karantina:wght@300;400;700&display=swap" rel="stylesheet">
-    <base href="/real-estate/" />
+    <base href="/" />
   </head>
 
   <body>
