--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://cdn.enable.co.il/licenses/enable-L37011sdqheonpkc-0125-70205/init.js"></script>
   </body>
 </html>
