--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Optimized Open Graph tags for better WhatsApp compatibility -->
     <meta property="og:title" content="עו&quot;ד אבי ליפינר - מומחה במקרקעין" />
     <meta property="og:description" content="ליווי משפטי מקצועי ואישי בעסקאות מכר דירות" />
-    <meta property="og:image" content="/real-estate/lovable-uploads/og-image.png" />
+    <meta property="og:image" content="https://real-estate.lipiner.co.il/lovable-uploads/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/png" />
@@ -31,5 +31,6 @@
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://cdn.enable.co.il/licenses/enable-L37011sdqheonpkc-0125-70207/init.js"></script>
   </body>
 </html>
