Revert "Merge branch 'main' of github.com:Denis1099/avi-lipiner-lawyer"
This reverts commit 23617ffea7b6e8bd537dffb503f32e8ba23732c5, reversing
changes made to 77437356a09da5552d60870ddc141e660ee4fd7c.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>עו"ד אבי ליפינר – מומחה במקרקעין ביהודה ושומרון</title>
-    <meta name="description" content="ליווי משפטי ופיננסי מקצועי בעסקאות נדל&quot;ן ביהודה ושומרון, כולל רישום במינהל האזרחי ואתגרים מימוניים ייחודיים" />
+    <title>עו"ד אבי ליפינר - מומחה במקרקעין</title>
+    <meta name="description" content="ליווי משפטי מקצועי ואישי בעסקאות מכר דירות - עו&quot;ד אבי ליפינר" />
     <meta name="author" content="עו&quot;ד אבי ליפינר" />
     
     <!-- Optimized Open Graph tags for better WhatsApp compatibility -->
@@ -15,7 +15,6 @@
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://shomron.lipiner.co.il/" />
     <meta property="og:locale" content="he_IL" />
     
     <!-- Emoji Favicon (Scales of Justice) -->
@@ -24,7 +23,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Karantina:wght@300;400;700&display=swap" rel="stylesheet">
-    <base href="/" />
+    <base href="/real-estate/" />
   </head>
 
   <body>
@@ -32,5 +31,6 @@
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://cdn.enable.co.il/licenses/enable-L37011sdqheonpkc-0125-70207/init.js"></script>
   </body>
 </html>
